--- a/.github/workflows/prerelease-build.yml
+++ b/.github/workflows/prerelease-build.yml
@@ -1,4 +1,4 @@
-name: Pre-release Build, Test, Sign, Publish
+﻿name: Pre-release Build, Test, Sign, Publish
 on:
   workflow_dispatch:
     inputs:
@@ -157,14 +157,6 @@ jobs:
       with:
         egress-policy: audit
 
-    - name: 'Checkout latest sleet.json'
-      uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      with:
-        sparse-checkout: |
-          sleet.json
-        sparse-checkout-cone-mode: false
-        persist-credentials: false
-
     - name: 'Setup .NET SDK'
       uses: actions/setup-dotnet@2016bd2012dba4e32de620c46fe006a3ac9f0602 # v5.0.1
 
@@ -173,20 +165,6 @@ jobs:
       with:
         name: signed-artifacts
         path : ${{ env.NUPKG_DIRECTORY }}
-
-    - name: Authenticate to Azure
-      uses: azure/login@a457da9ea143d694b1b9c7c869ebb04ebe844ef5 # 2.3.0
-      with:
-        allow-no-subscriptions : true
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-    - name: Publish NuGet Packages to Azure blob storage
-      shell : pwsh
-      run: |
-         dotnet tool install --tool-path ./sleet sleet
-         ./sleet/sleet push "${env:NUPKG_DIRECTORY}" --config ./sleet.json --source feed
 
     - name: Setup MyGet and GitHub Packages as NuGet Sources
       shell: pwsh
