--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,13 +7,12 @@
     <PackageVersion Include="coverlet.collector" Version="6.0.4" />
     <PackageVersion Include="DotNet.ReproducibleBuilds" Version="1.2.39" />
     <PackageVersion Include="DotNetAnalyzers.DocumentationAnalyzers" Version="1.0.0-beta.59" />
-    <PackageVersion Include="idunno.AtProto" Version="1.4.0-prelease.g5743f411b4" />
+    <PackageVersion Include="idunno.AtProto" Version="1.5.0-prelease.g777220324d" />
     <PackageVersion Include="JunitXml.TestLogger" Version="7.0.2" />
     <PackageVersion Include="Microsoft.CodeCoverage" Version="18.0.1" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageVersion Include="Microsoft.Sbom.Targets" Version="4.1.3" />
     <PackageVersion Include="Nerdbank.GitVersioning" Version="3.9.50" />
-    <PackageVersion Include="Quibble.Xunit" Version="0.3.1" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.18.0.131500" />
     <PackageVersion Include="System.CommandLine" Version="2.0.2" />
     <PackageVersion Include="xunit.v3" Version="3.2.2" />
