--- a/nuget.config
+++ b/nuget.config
@@ -3,14 +3,17 @@
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <!-- idunno.* Pre-release packages -->
     <add key="blowdart.myget.org" value="https://www.myget.org/F/blowdart/api/v3/index.json" />
   </packageSources>
 
   <packageSourceMapping>
+    <!-- Map idunno.AtProto and idunno.Bluesky packages to the pre-release feed -->
     <packageSource key="blowdart.myget.org">
       <package pattern="idunno.AtProto" />
       <package pattern="idunno.AtProto.*" />
       <package pattern="idunno.Bluesky" />
+      <package pattern="idunno.Bluesky.*" />
     </packageSource>
     <packageSource key="nuget.org">
       <package pattern="*" />
